update name in package json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "rails-parallel-example",
-	"description": "...",
-	"README": "...",
-	"repository": "...",
-	"license": "MIT"
+  "name": "buildkite-rails-parallel-example-with-knapsack_pro",
+  "description": "...",
+  "README": "...",
+  "repository": "...",
+  "license": "MIT"
 }
